...
            currentMatchDay = 31,
            startDateEndDate = "2025/2026",
            endDate = "2026-05-24",
            startDate = "2025-08-15",
        ),
        emblem = "https://crests.football-data.org/PL.png",
        name = "Premier League",
    ),
    Competition(
        id = 2014,
        area = Area(
            id = 2224,
            flag = "https://crests.football-data.org/760.svg",
...
                ),
                Table(
                    position = 3,
                    team = Team(
                        id = 57,
                        name = "Arsenal FC",
                        shortName = "Arsenal",
                        tla = "ARS",
                        crest = "https://crests.football-data.org/57.png",
                    ),
                    playedGames = 27,
                    won = 15,
                    draw = 7,
...
